--- a/FuchaBins/package.json
+++ b/FuchaBins/package.json
@@ -9,9 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@heroicons/react": "^2.0.17",
+    "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
