--- a/FuchaBins/package.json
+++ b/FuchaBins/package.json
@@ -13,6 +13,7 @@
     "@near-wallet-selector/core": "^7.9.3",
     "@near-wallet-selector/ledger": "^7.9.3",
     "@near-wallet-selector/my-near-wallet": "^7.9.3",
+    "axios": "^1.3.6",
     "global": "^4.4.0",
     "globalthis": "^1.0.3",
     "near-api-js": "^0.44.2",
